--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -334,6 +334,7 @@ org = "ballerinax"
 name = "ai.agent"
 version = "0.7.11"
 dependencies = [
+	{org = "ballerina", name = "data.jsondata"},
 	{org = "ballerina", name = "file"},
 	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "io"},
@@ -365,7 +366,7 @@ dependencies = [
 [[package]]
 org = "ballerinax"
 name = "openai.chat"
-version = "3.0.0"
+version = "3.0.1"
 dependencies = [
 	{org = "ballerina", name = "constraint"},
 	{org = "ballerina", name = "http"},
